<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameActivity">
    <TextView
        android:id="@+id/txtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/txtView_name"
        android:layout_margin="5dp"/>
    <Button
        android:id="@+id/btnNegative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp"
        android:text="@string/btn_negative"/>
    <Button
        android:id="@+id/btnPositive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtView"
        app:layout_constraintLeft_toRightOf="@id/btnNegative"
        android:layout_marginLeft="10dp"
        android:text="@string/btn_positive"/>

</androidx.constraintlayout.widget.ConstraintLayout>